# Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO
glib/: CMakeLists.txt
glib/src/: glib_render_target.cpp
include/: logging.hpp
include/ECS/components/: comp_animation.hpp  comp_graphic.hpp  comp_health.hpp  comp_position.hpp
include/texture_pack/: texture_pack.hpp
poolallocator/: allocator.h  bucket.h  bucket_cfg.h  main.cpp  memory_pool.h  pmr.h
src/: logging.cpp  main.cpp
src/ECS/components/: comp_animation.cpp  comp_graphic.cpp  comp_graphics.cpp  comp_health.cpp  comp_position.cpp  comp_velocity.cpp  i_component.cpp
src/ECS/entities/: entity.cpp
src/components/: i_component.cpp  i_component.hpp
src/components/comp_graphic/: comp_graphic.hpp
src/components/comp_texture/: comp_texture.cpp  comp_texture.hpp
src/components/comp_velocity/: comp_velocity.hpp
src/entities/: entity.cpp  entity.hpp
src/glib/glib_color/: glib_color.hpp
src/glib/glib_tools/: glib_tools.hpp
src/test/: test.cpp
src/texture_pack/: texture_pack.cpp
tests/: CMakeLists.txt
tests/test_poolallocator/: tests_poolallocator.cpp
tools/: allocator.h
trash/: it_test.cpp
